--- a/LojaVirtual-APP/src/app/produto/produto.component.html
+++ b/LojaVirtual-APP/src/app/produto/produto.component.html
@@ -1,30 +1,41 @@
-<table class="table table-dark">
+<div class="d-flex">
+  <div class="form-inline mr-auto">
+    <div class="form-group mb-2">
+      <label class="mr-2">Filtro:</label> <input type="text" class="form-control mr-2" placeholder="buscar"
+        [(ngModel)]="filtroLista">
+    </div>
+  </div>
+  <div>
+    <button class="btn btn-outline-primary">
+      <i class="fa fa-plus-circle"></i>&nbsp;
+      Novo Evento
+    </button>
+  </div>
+</div>
+
+<table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+     <th>ID</th>
+     <th>Nome</th>
+     <th>Categoria</th>
+     <th>Ativo</th>
+     <th>Opções</th>
     </tr>
   </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
+  <tbody *ngIf="produtos && produtos.length">
+    <tr *ngFor="let produto of produtoFiltro">
+      <th>{{produto.id}}</th>
+      <td>{{produto.nome}}</td>
+      <td>{{produto.categoria.nome}}</td>
+      <td>{{produto.ativo ? 'ATIVO': 'DESATIVADO'}}</td>
     </tr>
   </tbody>
+  <tfoot>
+    <td colspan="5" class="text-center">
+      <h4>
+        Nenhum produto encontrado!
+      </h4>
+    </td>
+  </tfoot>
 </table>
