--- a/LojaVirtual-APP/src/app/app.component.html
+++ b/LojaVirtual-APP/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-nav></app-nav>
+<!--<app-nav></app-nav>-->
 <div class="container">
-  <app-produto></app-produto>
   <router-outlet></router-outlet>
 </div>
