--- a/LojaVirtual-APP/src/app/nav/nav.component.html
+++ b/LojaVirtual-APP/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary h4">
   <div class="container">
-    <a class="navbar-brand" href="#">Catalogo da Cris</a>
+    <a class="navbar-brand" href="#">MyApp</a>
     <button
       class="navbar-toggler collapsed"
       type="button"
@@ -8,14 +8,23 @@
       data-target="#navbarColor02"
       aria-controls="navbarColor02"
       aria-expanded="false"
-      aria-label="Toggle navigation">
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="navbar-collapse collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownMenuLink"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
             <i class="fas fa-list-ul fa-2x"></i> Categorias
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -25,7 +34,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-star fa-2x" style="color: yellow;"></i> &nbsp;Novidades</a>
+          <a class="nav-link" href="#"
+            ><i class="fas fa-star fa-2x" style="color: yellow"></i>
+            &nbsp;Novidades</a
+          >
         </li>
       </ul>
       <form class="form-inline">
@@ -33,27 +45,35 @@
           class="form-control mr-sm-2"
           type="search"
           placeholder="O que procura?"
-          aria-label="Search"/>
+          aria-label="Search"
+        />
       </form>
 
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+      <ul *ngIf="user" class="navbar-nav">
+        <li class="nav-item dropdown" dropdown>
+          <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false" style="cursor: pointer; text-transform: capitalize;">
-            <i class="fas fa-user-circle fa-2x"></i>
+            <img
+            width="60"
+            height="60"
+            style="border-radius: 50%"
+            src="{{urlImage}}"
+          />
           </a>
-          <div  class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item">
               Perfil
             </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item"  style="cursor: pointer">
+            <a class="dropdown-item" (click)="logout()" style="cursor: pointer">
               Sair
             </a>
           </div>
         </li>
       </ul>
+      <button *ngIf="!user" class="btn btn-success" (click)="entrar()">Entrar</button>
 
     </div>
   </div>
 </nav>
+
