--- a/LojaVirtual-APP/src/app/user/login/login.component.html
+++ b/LojaVirtual-APP/src/app/user/login/login.component.html
@@ -2,8 +2,8 @@
 <body class="text-center" data-gr-c-s-loaded="true">
   <form class="form-signin" #loginForm="ngForm" (ngSubmit)="login()">
     <label for="username" class="sr-only">Usuário</label>
-    <input type="email" id="username" class="form-control" placeholder="Usuário" name="username" required
-      [(ngModel)]="model.username">
+    <input type="email" id="emailCPF" class="form-control" placeholder="Usuário" name="emailCPF" required
+      [(ngModel)]="model.emailCPF">
     <label for="password" class="sr-only">Password</label>
     <input type="password" id="password" class="form-control" placeholder="Senha" name="password" required
       [(ngModel)]="model.password">
