--- a/LojaVirtual-APP/src/app/top/nav/nav.component.html
+++ b/LojaVirtual-APP/src/app/top/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary h4">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark h2">
   <div class="container">
-    <a class="navbar-brand" href="#">MyApp</a>
+    <a class="navbar-brand" href="#"></a>
     <button
       class="navbar-toggler collapsed"
       type="button"
@@ -13,10 +13,12 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navbar-collapse collapse" id="navbarColor02">
+    <div  class="navbar-collapse collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" dropdown>
+          <div class="center">
           <a
+            dropdownToggle
             class="nav-link dropdown-toggle"
             href="#"
             id="navbarDropdownMenuLink"
@@ -24,10 +26,11 @@
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
-          >
+          >     
             <i class="fas fa-list-ul fa-2x"></i> Categorias
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        </div>
+          <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="#">Something else here</a>
@@ -36,26 +39,18 @@
         <li class="nav-item">
           <a class="nav-link" href="#"
             ><i class="fas fa-star fa-2x" style="color: yellow"></i>
-            &nbsp;Novidades</a
+            &nbsp; Novidades</a
           >
         </li>
       </ul>
-      <form class="form-inline">
-        <input
-          class="form-control mr-sm-2"
-          type="search"
-          placeholder="O que procura?"
-          aria-label="Search"
-        />
-      </form>
-
+     
       <ul *ngIf="user" class="navbar-nav">
         <li class="nav-item dropdown" dropdown>
           <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false" style="cursor: pointer; text-transform: capitalize;">
             <img
-            width="60"
-            height="60"
+            width="80"
+            height="80"
             style="border-radius: 50%"
             src="{{urlImage}}"
           />
