--- a/LojaVirtual-APP/src/app/top/nav/nav.component.html
+++ b/LojaVirtual-APP/src/app/top/nav/nav.component.html
@@ -13,24 +13,28 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div  class="navbar-collapse collapse" id="navbarColor02">
+    <div class="navbar-collapse collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown" dropdown>
           <div class="center">
-          <a
-            dropdownToggle
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >     
-            <i class="fas fa-list-ul fa-2x"></i> Categorias
-          </a>
-        </div>
-          <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a
+              dropdownToggle
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <i class="fas fa-list-ul fa-1x">&nbsp; Categorias</i>
+            </a>
+          </div>
+          <div
+            *dropdownMenu
+            class="dropdown-menu"
+            aria-labelledby="navbarDropdownMenuLink"
+          >
             <a class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="#">Something else here</a>
@@ -38,37 +42,77 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
-            ><i class="fas fa-star fa-2x" style="color: yellow"></i>
-            &nbsp; Novidades</a
-          >
-        </li>
-      </ul>
-     
-      <ul *ngIf="user" class="navbar-nav">
-        <li class="nav-item dropdown" dropdown>
-          <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="cursor: pointer; text-transform: capitalize;">
-            <img
-            width="80"
-            height="80"
-            style="border-radius: 50%"
-            src="{{urlImage}}"
-          />
+            ><i class="fas fa-star fa-1x">&nbsp;Novidades</i> &nbsp;
           </a>
-          <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item">
-              Perfil
-            </a>
-            <div role="separator" class="divider"></div>
-            <a class="dropdown-item" (click)="logout()" style="cursor: pointer">
-              Sair
+        </li>
+
+        <li class="nav-item dropdown" dropdown>
+          <div class="center">
+            <a
+              dropdownToggle
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <i class="fas fa-users-cog fa-1x">&nbsp; Administrativo</i>
             </a>
           </div>
+          <div
+            *dropdownMenu
+            class="dropdown-menu"
+            aria-labelledby="navbarDropdownMenuLink"
+          >
+            <a class="dropdown-item" href="#"></a>
+            <a class="dropdown-item" href="#"></a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
         </li>
-      </ul>
-      <button *ngIf="!user" class="btn btn-success" (click)="entrar()">Entrar</button>
+        <div class="">
+          <li *ngIf="user" class="nav-item dropdown" dropdown>
+            <a
+              dropdownToggle
+              class="nav-link"
+              id="navbarDropdownMenuLink"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              style="cursor: pointer; text-transform: capitalize"
+            >
+              <img
+                width="50"
+                height="50"
+                style="border-radius: 50%"
+                src="{{ urlImage }}"
+              />
+            </a>
+            <div
+              *dropdownMenu
+              class="dropdown-menu"
+              aria-labelledby="navbarDropdownMenuLink"
+            >
+              <a
+                class="dropdown-item"
+                [routerLink]="['/user/perfil']"
+                routerLinkActive="router-link-active"
+              >
+                Perfil
+              </a>
+              <div role="separator" class="divider"></div>
+              <a class="dropdown-item" (click)="logout()"> Sair </a>
+            </div>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/user/login']">
+              <i *ngIf="!user" class="fas fa-house-user fa-1x mr-3"></i>
+            </a>
+          </li>
+        </div>
+      </ul>
     </div>
   </div>
 </nav>
-
