--- a/LojaVirtual-APP/src/app/produto/produto.component.html
+++ b/LojaVirtual-APP/src/app/produto/produto.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="d-flex">
   <div class="form-inline mr-auto">
     <div class="form-group mb-2">
@@ -11,7 +12,7 @@
     </div>
   </div>
   <div>
-    <button class="btn btn-outline-primary" (click)="novoProduto(template)">
+    <button class="btn btn-outline-secondary" (click)="novoProduto(template)">
       <i class="fa fa-plus-circle"></i>&nbsp; Novo Produto
     </button>
   </div>
@@ -23,7 +24,6 @@
       <th>ID</th>
       <th>Nome</th>
       <th>Categoria</th>
-      <th>Status</th>
       <th>Detalhes</th>
     </tr>
   </thead>
@@ -32,18 +32,20 @@
       <th>{{ produto.id }}</th>
       <td>{{ produto.nome }}</td>
       <td>{{ produto.categoria.nome }}</td>
-      <td>{{ produto.ativo ? "ATIVO" : "DESATIVADO" }}</td>
       <td>
-        <button class="btn btn-info" (click)="editarProduto(produto, template)"><i class="fas fa-info-circle"></i></button>
+        <button class="btn btn-info" (click)="editarProduto(produto, template)">
+          <i class="fas fa-info-circle"></i>
+        </button>
       </td>
     </tr>
   </tbody>
-  <tfoot *ngIf="produtos && !produtoFiltro.length">
+  <tfoot *ngIf="(produtoFiltro && !produtoFiltro.length) || !produto">
     <td colspan="6" class="text-center">
       <h4>Nenhum produto encontrado!</h4>
     </td>
   </tfoot>
 </table>
+</div>
 
 <div
   bsModal
@@ -73,14 +75,17 @@
           <div class="form-row">
             <div class="form-group col-md-2">
               <label>Identificação</label>
-              <input type="text" class="form-control"
-              [ngClass]="{
-                'is-invalid':
-                  registerForm.get('id').errors &&
-                  registerForm.get('id').touched
-              }"
-              formControlName="id"
-              disabled />
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('id').errors &&
+                    registerForm.get('id').touched
+                }"
+                formControlName="id"
+                disabled
+              />
             </div>
             <div class="form-group col-md-10">
               <label>Nome</label>
@@ -129,7 +134,6 @@
               >
                 Descrição é obrigatória
               </div>
-              
             </div>
           </div>
           <div class="form-row">
