--- a/LojaVirtual-APP/src/app/top/nav/nav.component.html
+++ b/LojaVirtual-APP/src/app/top/nav/nav.component.html
@@ -66,7 +66,7 @@
             class="dropdown-menu"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" href="#"></a>
+            <a class="dropdown-item" routerLink="/produto">Produtos</a>
             <a class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
