--- a/LojaVirtual-APP/src/app/user/registration/registration.component.html
+++ b/LojaVirtual-APP/src/app/user/registration/registration.component.html
@@ -209,7 +209,8 @@ Confirmação não confere
     <label class="checkbox-inline">
       <input
       type="checkbox"
-      value=""
+      value="true"
+      checked
       formControlName="concordaTermos"
       />&nbsp;Concordo com os <a class="link-info" (click)="openModal(template, 1)">termos e confições</a>
     </label>
