--- a/LojaVirtual-APP/src/app/produto/produto.component.html
+++ b/LojaVirtual-APP/src/app/produto/produto.component.html
@@ -39,11 +39,11 @@
       </td>
     </tr>
   </tbody>
-  <tfoot *ngIf="(produtoFiltro && !produtoFiltro.length) || !produto">
+  <!-- <tfoot *ngIf="produto && !produtoFiltro.length">
     <td colspan="6" class="text-center">
       <h4>Nenhum produto encontrado!</h4>
     </td>
-  </tfoot>
+  </tfoot> -->
 </table>
 </div>
 
@@ -78,12 +78,6 @@
               <input
                 type="text"
                 class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('id').errors &&
-                    registerForm.get('id').touched
-                }"
-                formControlName="id"
                 disabled
               />
             </div>
@@ -142,34 +136,18 @@
               <input
                 type="text"
                 class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('precoAtual').errors &&
-                    registerForm.get('precoAtual').touched
-                }"
+                
                 formControlName="precoAtual"
                 placeholder="Insira o atual preço do produto"
               />
-              <div
-                *ngIf="
-                  registerForm.get('precoAtual').hasError('max') &&
-                  registerForm.get('precoAtual').touched
-                "
-                class="invalid-feedback"
-              >
-                Preço atual é obrigatório
-              </div>
+              
             </div>
             <div class="form-group col-md-6">
               <label>Preço antigo</label>
               <input
                 type="text"
                 class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('precoAntigo').errors &&
-                    registerForm.get('precoAntigo').touched
-                }"
+                
                 formControlName="precoAntigo"
                 placeholder="Existe um preço antigo?"
               />
@@ -181,47 +159,20 @@
               <input
                 type="number"
                 class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('descontoPorcentagem').errors &&
-                    registerForm.get('descontoPorcentagem').touched
-                }"
+                
                 formControlName="descontoPorcentagem"
                 placeholder="Existe desconto?"
               />
-              <div
-                *ngIf="
-                  registerForm.get('descontoPorcentagem').hasError('min') ||
-                  (registerForm.get('descontoPorcentagem').hasError('max') &&
-                    registerForm.get('descontoPorcentagem').touched)
-                "
-                class="invalid-feedback"
-              >
-                Defina um desconto válido
-              </div>
+             
             </div>
             <div class="form-group col-md-6">
               <label>Quantidade em Estoque</label>
               <input
                 type="number"
                 class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('estoque').errors &&
-                    registerForm.get('estoque').touched
-                }"
+               
                 formControlName="estoque"
               />
-              <div
-                *ngIf="
-                  registerForm.get('estoque').hasError('min') ||
-                  (registerForm.get('estoque').hasError('max') &&
-                    registerForm.get('estoque').touched)
-                "
-                class="invalid-feedback"
-              >
-                Defina um numero entre 0 e 9999.
-              </div>
             </div>
           </div>
           <div class="form-row">
@@ -229,28 +180,12 @@
               <label>Categoria</label>
               <select
                 class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('categoria').errors &&
-                    registerForm.get('categoria').touched
-                }"
-                formControlName="categoria"
+                (change)="onSelectCategoria($event.target.value)"
               >
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+                <option *ngFor="let categoria of categorias" value={{categoria.id}}>{{categoria.nome}}</option>
+              
               </select>
-              <div
-                *ngIf="
-                  registerForm.get('categoria').hasError('required') &&
-                  registerForm.get('categoria').touched
-                "
-                class="invalid-feedback"
-              >
-                Categoria é obrigatório.
-              </div>
+              
             </div>
             <div class="form-group col-md-6">
               <label>Destaque</label>
@@ -263,7 +198,17 @@
               </select>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label class="checkbox-inline">
+                <input
+                type="checkbox"
+                formControlName="ativo"
+                />&nbsp;Produto Ativo
+              </label>
+            </div>
+          </div>
         </form>
       </div>
       <div class="modal-footer d-flex">
@@ -272,9 +217,9 @@
         </button>
         <button
           class="btn btn-primary ml-auto"
-          [disabled]="!registerForm.valid"
+          (click)="salvarProduto(template)"
         >
-          Salvar Alterações
+          Gravar
         </button>
       </div>
     </div>
