--- a/LojaVirtual-APP/src/app/top/nav/nav.component.html
+++ b/LojaVirtual-APP/src/app/top/nav/nav.component.html
@@ -34,8 +34,13 @@
             *dropdownMenu
             class="dropdown-menu"
             aria-labelledby="navbarDropdownMenuLink"
-           >
-            <a *ngFor="let categoria of categorias" class="dropdown-item" href="#">{{categoria.nome}}</a>
+          >
+            <a
+              *ngFor="let categoria of categorias"
+              class="dropdown-item"
+              href="#"
+              >{{ categoria.nome }}</a
+            >
           </div>
         </li>
         <li class="nav-item">
@@ -64,9 +69,9 @@
             class="dropdown-menu"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" routerLink="/produto">Produtos</a>
-            <a class="dropdown-item" href="#"></a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" routerLink="/admin/produto">Produtos</a>
+            <a class="dropdown-item" routerLink="/admin/categoria">Categorias</a>
+            <div class="dropdown-divider"></div>
           </div>
         </li>
         <div class="">
@@ -114,3 +119,4 @@
     </div>
   </div>
 </nav>
+<input (click)="SelecionaPerfil()" id="refreshPerfil" type="hidden"/>
