CategoriaRepositorio; Alteracao CategoriaController; add DestaqueController; DestaqueService

--- a/LojaVirtual-APP/src/app/admin/categoria/categoria.component.html
+++ b/LojaVirtual-APP/src/app/admin/categoria/categoria.component.html
@@ -1,3 +1,145 @@
-<p>
-  categoria works!
-</p>
+
+<button class="btn btn-outline-dark" (click)="novoEvento(template)">
+  <i class="fa fa-plus-circle"></i>&nbsp; Nova categoria
+</button>
+
+<table class="table table-striped table-dark">
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Descrição</th>
+      <th colspan="2">Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="categorias && categorias.length">
+    <tr *ngFor="let categoria of categorias">
+      <td>{{ categoria.nome | slice: 0:20 }}</td>
+      <td>{{ categoria.descricao | slice: 0:20 }}</td>
+      <td>
+        <div class="btn-group">
+          <!-- <button class="btn btn-sm btn-info" tooltip="Detalhes" (click)="editarEvento(evento, template)">
+            <i class="fas fa-info-circle"></i>
+          </button> -->
+          <button class="btn btn-sm btn-danger" tooltip="Excluir">
+            <i class="fa fa-eraser"></i>
+          </button>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!categorias">
+    <tr>
+      <td colspan="5" class="text-center">
+        <h4>Nenhuma categoria encontrada</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
+
+<div
+  bsModal
+  #template="bs-modal"
+  class="modal fade"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="dialog-sizes-name1"
+>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-sizes-name1" class="modal-title pull-left">
+          {{ tipoModal === "new" ? "Nova categoria" : "Editar categoria" }}
+        </h4>
+        <button
+          type="button"
+          class="close pull-right"
+          (click)="template.hide()"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="registerForm">
+          <div class="form-group">
+            <label>Nome</label>
+            <input
+              type="text"
+              class="form-control"
+              [ngClass]="{
+                'is-invalid':
+                  registerForm.get('nome').errors &&
+                  registerForm.get('nome').touched
+              }"
+              formControlName="nome"
+              placeholder="Nome da categoria"
+            />
+            <div
+              *ngIf="
+                registerForm.get('nome').hasError('required') &&
+                registerForm.get('nome').touched
+              "
+              class="invalid-feedback"
+            >
+              Nome é obrigatório.
+            </div>
+            <div
+              *ngIf="
+                registerForm.get('nome').hasError('minlength') &&
+                registerForm.get('nome').touched
+              "
+              class="invalid-feedback"
+            >
+              Nome deve ter no mínimo 10 Caracters.
+            </div>
+            <div
+              *ngIf="
+                registerForm.get('nome').hasError('maxlength') &&
+                registerForm.get('nome').touched
+              "
+              class="invalid-feedback"
+            >
+              Nome deve ter no máximo 40 Caracters.
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label>Descrição</label>
+            <textarea
+              class="form-control"
+              [ngClass]="{
+                'is-invalid':
+                  registerForm.get('descricao').errors &&
+                  registerForm.get('descricao').touched
+              }"
+              formControlName="descricao"
+              placeholder="Descrição"
+            ></textarea>
+            <div
+              *ngIf="
+                registerForm.get('descricao').hasError('maxlength') &&
+                registerForm.get('descricao').touched
+              "
+              class="invalid-feedback"
+            >
+              Descrição deve ter no máximo 2000 Caracters.
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-footer d-flex">
+        <button class="btn btn-secondary" (click)="template.hide()">
+          Fechar
+        </button>
+        <button
+          class="btn btn-primary ml-auto"
+          [disabled]="!registerForm.valid"
+          (click)="salvarAlteracao(template)"
+        >
+          <i class="fas fa-save"></i>&nbsp;Gravar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
