--- a/LojaVirtual-APP/src/app/admin/produto/produto.component.html
+++ b/LojaVirtual-APP/src/app/admin/produto/produto.component.html
@@ -18,8 +18,8 @@
   </div>
 </div>
 
-<table class="table table-striped">
-  <thead class="thead-light">
+<table class="table table-striped table-dark">
+  <thead>
     <tr>
       <th>ID</th>
       <th>Nome</th>
@@ -59,7 +59,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h4 id="dialog-sizes-name1" class="modal-title pull-left">
-          Large modal
+         {{tituloModal}}
         </h4>
         <button
           type="button"
@@ -73,15 +73,7 @@
       <div class="modal-body">
         <form [formGroup]="registerForm">
           <div class="form-row">
-            <div class="form-group col-md-2">
-              <label>Identificação</label>
-              <input
-                type="text"
-                class="form-control"
-                disabled
-              />
-            </div>
-            <div class="form-group col-md-10">
+            <div class="form-group col">
               <label>Nome</label>
               <input
                 type="text"
@@ -134,22 +126,24 @@
             <div class="form-group col-md-6">
               <label>Preço atual</label>
               <input
+                currencyMask
+                [(ngModel)]= "valorProduto" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
                 type="text"
                 class="form-control"
-                
                 formControlName="precoAtual"
-                placeholder="Insira o atual preço do produto"
+                placeholder="R$ 0.00"
               />
-              
+
             </div>
             <div class="form-group col-md-6">
               <label>Preço antigo</label>
               <input
+              currencyMask
+                [(ngModel)]= "valorAntigo" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
                 type="text"
                 class="form-control"
-                
                 formControlName="precoAntigo"
-                placeholder="Existe um preço antigo?"
+                placeholder="R$ 0.00"
               />
             </div>
           </div>
@@ -159,20 +153,34 @@
               <input
                 type="number"
                 class="form-control"
-                
+
                 formControlName="descontoPorcentagem"
                 placeholder="Existe desconto?"
               />
-             
+
             </div>
             <div class="form-group col-md-6">
               <label>Quantidade em Estoque</label>
               <input
                 type="number"
                 class="form-control"
-               
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('estoque').errors &&
+                    registerForm.get('estoque').touched
+                }"
                 formControlName="estoque"
               />
+              <div class="invalid-feedback"
+              *ngIf="registerForm.get('estoque').hasError('max') &&
+                     registerForm.get('estoque').touched">
+                Valor máximo de estoque é 9999
+              </div>
+              <div class="invalid-feedback"
+              *ngIf="registerForm.get('estoque').hasError('min') &&
+                     registerForm.get('estoque').touched">
+                Estoque não pode ser negativo
+              </div>
             </div>
           </div>
           <div class="form-row">
@@ -183,18 +191,7 @@
                 (change)="onSelectCategoria($event.target.value)"
               >
                 <option *ngFor="let categoria of categorias" value={{categoria.id}}>{{categoria.nome}}</option>
-              
-              </select>
-              
-            </div>
-            <div class="form-group col-md-6">
-              <label>Destaque</label>
-              <select class="form-control" formControlName="destaque">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+
               </select>
             </div>
           </div>
@@ -219,7 +216,7 @@
           class="btn btn-primary ml-auto"
           (click)="salvarProduto(template)"
         >
-          Gravar
+        <i class="fas fa-save"></i>&nbsp;Gravar
         </button>
       </div>
     </div>
