--- a/LojaVirtual-APP/src/app/top/nav/nav.component.css
+++ b/LojaVirtual-APP/src/app/top/nav/nav.component.css
@@ -1,1 +1,14 @@
+#userDropDown{
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  overflow: hidden;
+}
 
+#userDropDown img {
+  border-radius: 50%;
+  width: 100%;
+  object-fit: cover;
+}
