--- a/LojaVirtual-APP/src/app/admin/produto/produto.component.css
+++ b/LojaVirtual-APP/src/app/admin/produto/produto.component.css
@@ -1,1 +1,21 @@
+::-webkit-input-placeholder {
+  color: white;
+  font: 14px verdana, arial, sans-serif;
+}
+
+:-moz-placeholder {
+  color: white;
+  font: 14px verdana, arial, sans-serif;
+}
+
+::-moz-placeholder {
+  color: white;
+  font: 14px verdana, arial, sans-serif;
+}
+
+:-ms-input-placeholder {
+  color: white;
+  font: 14px verdana, arial, sans-serif;
+}
+
 
