--- a/LojaVirtual-APP/src/app/admin/produto/produto.component.html
+++ b/LojaVirtual-APP/src/app/admin/produto/produto.component.html
@@ -1,41 +1,51 @@
 <div class="container">
-<div class="d-flex">
-  <div class="form-inline mr-auto">
-    <div class="form-group mb-2">
-      <label class="mr-2">Filtro:</label>
+  <div class="border border-dark p-2 mb-2 bg-dark text-white">
+    <label>Filtrar produtos</label>
+    <button (click)="onSelectCategoriaFiltro(0)" class="btn btn-sm btn-dark float-right"><i class="fas fa-eraser"></i>&nbsp;Limpar</button>
+  <div class="form-row mr-auto">
+    <div class="form-group col-6">
+      <select required
+                class="form-control bg-dark text-white"
+                (change)="onSelectCategoriaFiltro($event.target.value)"
+              >
+                <option disabled [selected]='selectDefaultCategoriaSelect' style="display: none;">Categoria</option>
+                <option *ngFor="let categoria of categorias" value={{categoria.id}}>{{categoria.nome}}</option>
+
+              </select>
+    </div>
+    <div class="form-group col-6">
       <input
         type="text"
-        class="form-control mr-2"
-        placeholder="buscar"
+        class="form-control bg-dark text-white"
+        placeholder="Buscar"
         [(ngModel)]="filtroLista"
       />
     </div>
   </div>
-  <div>
-    <button class="btn btn-outline-secondary" (click)="novoProduto(template)">
-      <i class="fa fa-plus-circle"></i>&nbsp; Novo Produto
-    </button>
   </div>
-</div>
-
+<div class="table-responsive" >
+  <div  style="max-height: 600px;">
 <table class="table table-striped table-dark">
   <thead>
     <tr>
       <th>ID</th>
       <th>Nome</th>
-      <th>Categoria</th>
-      <th>Detalhes</th>
+      <th>Opções</th>
     </tr>
   </thead>
   <tbody *ngIf="produtos && produtos.length">
     <tr *ngFor="let produto of produtoFiltro">
       <th>{{ produto.id }}</th>
       <td>{{ produto.nome }}</td>
-      <td>{{ produto.categoria.nome }}</td>
       <td>
-        <button class="btn btn-sm btn-info" (click)="editarProduto(produto, template)">
+        <div class="btn-group">
+        <button class="btn btn-sm btn-info" tooltip="Detalhes" (click)="editarProduto(produto, template)">
           <i class="fas fa-info-circle"></i>
         </button>
+        <button class="btn btn-sm btn-danger" tooltip="Excluir">
+          <i class="fa fa-eraser"></i>
+        </button>
+        </div>
       </td>
     </tr>
   </tbody>
@@ -46,6 +56,15 @@
   </tfoot>
 </table>
 </div>
+</div>
+<div class="float-right mt-2">
+  <button class="btn btn-outline-dark" (click)="novoProduto(template)">
+    <i class="fa fa-plus-circle"></i>&nbsp; Adicionar
+  </button>
+</div>
+</div>
+
+
 
 <div
   bsModal
@@ -283,14 +302,24 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label>Categoria</label>
-              <select required
+              <select id="selectCategoria" required
                 class="form-control"
-                (change)="onSelectCategoria($event.target.value)"
+                [ngClass]="{
+                  'is-invalid':
+                   erroCategoria
+                }"
+                (change)="onSelectCategoriaForm($event.target.value)"
               >
-                <option disabled selected style="display: none;" value="">Seleciona uma categoria</option>
+                <option disabled [selected]='selectDefaultCategoriaForm' style="display: none;">Seleciona uma categoria</option>
                 <option *ngFor="let categoria of categorias" value={{categoria.id}}>{{categoria.nome}}</option>
 
               </select>
+              <div
+              *ngIf="erroCategoria"
+              class="invalid-feedback"
+            >
+             Você deve selecionar uma categoria
+            </div>
             </div>
           </div>
 
