--- a/LojaVirtual-APP/src/app/admin/produto/produto.component.html
+++ b/LojaVirtual-APP/src/app/admin/produto/produto.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="border border-dark p-2 mb-2 bg-dark text-white">
+  <div class="border border-dark p-2 bg-dark text-white">
     <label>Filtrar produtos</label>
     <button (click)="onSelectCategoriaFiltro(0)" class="btn btn-sm btn-dark float-right"><i class="fas fa-eraser"></i>&nbsp;Limpar</button>
   <div class="form-row mr-auto">
@@ -42,7 +42,7 @@
         <button class="btn btn-sm btn-info" tooltip="Detalhes" (click)="editarProduto(produto, template)">
           <i class="fas fa-info-circle"></i>
         </button>
-        <button class="btn btn-sm btn-danger" tooltip="Excluir">
+        <button class="btn btn-sm btn-danger" tooltip="Excluir" (click)="excluirProduto(produto, confirm)">
           <i class="fa fa-eraser"></i>
         </button>
         </div>
@@ -78,7 +78,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h4 id="dialog-sizes-name1" class="modal-title pull-left">
-         {{tituloModal}}
+
         </h4>
         <button
           type="button"
@@ -306,16 +306,15 @@
                 class="form-control"
                 [ngClass]="{
                   'is-invalid':
-                   erroCategoria
+                   !categoriaForm && !erroCategoria
                 }"
                 (change)="onSelectCategoriaForm($event.target.value)"
               >
                 <option disabled [selected]='selectDefaultCategoriaForm' style="display: none;">Seleciona uma categoria</option>
-                <option *ngFor="let categoria of categorias" value={{categoria.id}}>{{categoria.nome}}</option>
-
+                <option *ngFor="let categoria of categorias" [selected]='!selectDefaultCategoriaForm && categoria.id == categoriaForm.id' value={{categoria.id}}>{{categoria.nome}}</option>
               </select>
               <div
-              *ngIf="erroCategoria"
+              *ngIf="!categoriaForm && erroCategoria"
               class="invalid-feedback"
             >
              Você deve selecionar uma categoria
@@ -345,6 +344,32 @@
           (click)="salvarProduto(template)"
         >
         <i class="fas fa-save"></i>&nbsp;Gravar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">
+          Deletando Produto
+        </h4>
+        <button type="button" class="close pull-right" (click)="confirm.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="bodyModalDelete"></p>
+      </div>
+      <div class="modal-footer btn-group d-flex">
+        <button type="button" class="btn btn-outline-primary" (click)="confirm.hide()">
+          CENCELAR
+        </button>
+        <button type="button" class="btn btn-outline-danger" (click)="ConfirmDelete(confirm)">
+          DELETAR
         </button>
       </div>
     </div>
