--- a/LojaVirtual-APP/src/app/admin/produto/produto.component.css
+++ b/LojaVirtual-APP/src/app/admin/produto/produto.component.css
@@ -18,4 +18,11 @@
   font: 14px verdana, arial, sans-serif;
 }
 
+.container {
+  border-radius: 5%;
+  margin-bottom: 40px;
+  background: rgba(253, 253, 253, 0.3);
+  padding: 10px;
+  }
+
 
