--- a/LojaVirtual-APP/src/app/user/login/login.component.html
+++ b/LojaVirtual-APP/src/app/user/login/login.component.html
@@ -1,15 +1,28 @@
 
-<body class="text-center" data-gr-c-s-loaded="true">
+<body class="text-center p-3" data-gr-c-s-loaded="true">
+
   <form class="form-signin" #loginForm="ngForm" (ngSubmit)="login()">
+    <i class="fas fa-heading fa-4x"></i>
+    <h1 class="h3 mb-3 font-weight-normal">Acesse sua conta</h1>
     <label for="username" class="sr-only">Usuário</label>
-    <input type="email" id="emailCPF" class="form-control" placeholder="Usuário" name="emailCPF" required
+    <input type="email" id="emailCPF" class="form-control" placeholder="Email ou CPF" name="emailCPF" required autofocus
       [(ngModel)]="model.emailCPF">
-    <label for="password" class="sr-only">Password</label>
+    <label for="password" class="sr-only">Senha de acesso</label>
     <input type="password" id="password" class="form-control" placeholder="Senha" name="password" required
-      [(ngModel)]="model.password">
-    <button [disabled]="!loginForm.valid" class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-    <p class="mt-5 mb-3 text-muted">Não tem login? Cadastre-se abaixo</p>
-    <button class="btn btn-lg btn-link btn-block" (click)="router.navigate(['/user/registration'])">Quero me
-      cadastrar</button>
+      [(ngModel)]="model.password"><br/>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+
+    <div class="form-row h5">
+
+      <div class="col-md-6">
+        <p class="mt-5 mb-3">Ainda não possui conta? <br/>
+           <button class="btn btn-lg btn-link btn-block" (click)="router.navigate(['/user/registration'])">Cadastre-se agora</button> </p>
+      </div>
+
+      <div class="col-md-6">
+        <p class="mt-sm-2 mt-md-5 mb-3">Esqueceu seus dados?<br/>
+          <button class="btn btn-lg btn-link btn-block">Recuperar senha</button> </p>
+      </div>
+    </div>
   </form>
 </body>
